test/fail_compilation/fail73.d
int main()
{
    int u=2;

    switch(u)
    {
	case 1:
	    void j()
	    {
		case 2:
		    u++;
	    }
	break;
    }
}

